--- a/Desktop/projekte/Fahrtkostenabrechnung - Symfony /app/templates/index.html.twig
+++ b/Desktop/projekte/Fahrtkostenabrechnung - Symfony /app/templates/index.html.twig
@@ -4,11 +4,6 @@
 
 {% block style %}
 
-    h1 {
-        display:flex;
-        justify-content:center;
-        text-decoration: underline;
-    }
 
 
 
@@ -18,7 +13,7 @@
 
 {% block body %}
 
-    <h1> Welcome to our page </h1>
+    <center> <h1> Geben sie hier ihre Daten ein </h1> </center>
 
 
 {% endblock %}
